Added comment around hover

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,48 @@
 a {
-  color: #11999E;
+  color: #11999e;
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
-a:hover {
+/* a:hover {
   color: #EAF6F6;
-}
+} */
 
 body {
   margin: 0;
   text-align: center;
-  font-family: 'Merriweather', serif;
-  color: #40514E;
+  font-family: "Merriweather", serif;
+  color: #40514e;
 }
 
 h1 {
   font-size: 5.625rem;
   margin: 50px auto 0 auto;
-  font-family: 'Sacramento', cursive;
-  color: #66BFBF;
+  font-family: "Sacramento", cursive;
+  color: #66bfbf;
 }
 
 h2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 2.5rem;
-  color: #66BFBF;
+  color: #66bfbf;
   font-weight: normal;
 }
 
 h3 {
-  font-family: 'Montserrat', sans-serif;
-  color: #11999E;
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
 }
 
 hr {
   width: 4%;
   border-style: dotted none none none;
   border-width: 5px;
-  border-color: #CED6F5;
+  border-color: #ced6f5;
 }
 
 p {
-    line-height: 2;
+  line-height: 2;
 }
 
 .btn {
@@ -55,7 +55,8 @@ p {
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: 'Montserrat', sans-serif;  color: #ffffff;
+  font-family: "Montserrat", sans-serif;
+  color: #ffffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
@@ -72,7 +73,7 @@ p {
 }
 
 .bottom-container {
-  background-color: #66BFBF;
+  background-color: #66bfbf;
   height: 100px;
   padding-top: 30px;
 }
@@ -94,8 +95,8 @@ p {
 }
 
 .copyright {
-  color: #EAF6F6;
-  font-size: .8em;
+  color: #eaf6f6;
+  font-size: 0.8em;
   margin-top: 2rem;
   margin-bottom: 0;
 }
@@ -152,7 +153,7 @@ p {
 }
 
 .top-container {
-  background-color: #E4F9F5;
+  background-color: #e4f9f5;
   position: relative;
   padding-top: 100px;
 }
